add response control and hotfix response messages
